--- a/configs/paths/default.yaml
+++ b/configs/paths/default.yaml
@@ -1,7 +1,7 @@
 # path to root directory
 # this requires PROJECT_ROOT environment variable to exist
 # PROJECT_ROOT is inferred and set by pyrootutils package in `train.py` and `eval.py`
-root_dir: /home/yutong/EDMsound/
+root_dir: /home/yutong/github/EDMSound/
 
 # path to data directory
 data_dir: /storageNVME/yutong/
